@@ -1,3 +1,7 @@
+2008-10-17  Wakaba  <wakaba@suika.fam.cx>
+
+	* ElementTypeDefinition.pm (content_model_text): New attribute.
+
 2008-04-12  Wakaba  <wakaba@suika.fam.cx>
 
 	* Element.pm (create_element, create_element_ns): Inputs
